corrected mobile nav label and input name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ footer {
   list-style: none;
 }
 
-.mobile-navbar-container #header-checkbox {
+.mobile-navbar-container #nav-mobile-checkbox {
   position: absolute;
   display: block;
   height: 32px;
